fix prospect edit path

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,8 @@
 == README
 
+CRM & Sales Back Office Built by Chris Cunningham for ASPIRE
+
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
